--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "http://proj.ruppin.ac.il/bgroup5/FinalProject/frontEnd"
 }
 
