--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "jss-rtl": "^0.3.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
+    "react-circle": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-window": "^1.8.5",
