--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "react-window": "^1.8.5",
     "sweetalert": "^2.1.2"
   },
