--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
     "@material-ui/styles": "^4.9.6",
+    "@react-google-maps/api": "^1.9.7",
     "@sandstreamdev/react-swipeable-list": "^0.4.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,7 +19,6 @@
     "react-bootstrap": "^1.2.0",
     "react-circle": "^1.1.1",
     "react-dom": "^16.13.1",
-    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
